--- a/src/components/Contact/index.css
+++ b/src/components/Contact/index.css
@@ -1,114 +1,157 @@
 /* ContactInfo.css */
 .contact-container {
-    /* display: flex; */
-    flex-direction: column;
-    justify-content: center;
-    position: relative;
-    z-index: 1;
-    align-items: center;
-    padding: 0px 0px 60px 0px;
-    margin: 0 auto;
-    color:#FFFFFF;
-    width: 72%;
-    /* margin: 0 auto; */
-  }
-  
-  h1 {
-    text-align: center;
-    /* color: #cccccc;
-    margin-bottom: 20px; */
-    font-size: 42px;
-    font-weight: 600;
-    margin: 0;
-    padding: 0 20px;
-  }
-  
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  z-index: 1;
+  align-items: center;
+  padding: 0px 0px 60px 0px;
+  margin: 0 auto;
+  color: #FFFFFF;
+  width: 72%;
+}
+
+h1 {
+  text-align: center;
+  font-size: 42px;
+  font-weight: 600;
+  margin: 0;
+  padding: 0 20px;
+}
+
+.contact-content {
+  display: flex;
+  gap: 2%;
+  padding-top: 20px;
+}
+
+.social-links {
+  width: 30%;
+}
+
+.social-link {
+  background-color: #171721;
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  font-size: 20px;
+}
+
+.social-link a {
+  color: #ffffff;
+  text-decoration: underline;
+}
+
+.icon {
+  margin-right: 10px;
+}
+
+.external-link {
+  color: #666666;
+}
+
+.social-link.linkedin:hover {
+  background-color: #0e76a8; /* LinkedIn Blue */
+}
+
+.social-link.facebook:hover {
+  background-color: #4267B2; /* Facebook Blue */
+}
+
+.social-link.email:hover {
+  background-color: #D44638; /* Gmail Red */
+}
+
+.social-link.youtube:hover {
+  background-color: #FF0000; /* YouTube Red */
+}
+
+.contact-form {
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  background-color: inherit;
+}
+
+input, textarea {
+  background-color: #2a2a2a;
+  border: none;
+  padding: 10px;
+  margin-bottom: 10px;
+  color: #ffffff;
+  border-radius: 5px;
+  font-size: 20px;
+  background-color: #171721;
+}
+
+textarea {
+  height: 250px;
+  resize: vertical;
+}
+
+button {
+  background-color: #00ff00;
+  color: #000000;
+  border: none;
+  padding: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+}
+
+button:hover {
+  background-color: #D44638; /* Hover effect: changes background color to red */
+}
+
+.send-icon {
+  margin-left: 10px;
+}
+
+@media (max-width: 768px) {
   .contact-content {
-    display: flex;
-    /* justify-content: space-between; */
-    gap: 2%;
-    padding-top: 20px;
-  }
-  
-  .social-links {
-    width: 30%;
-  }
-  
-  .social-link {
-    background-color: #2a2a2a;
-    padding: 10px;
-    margin-bottom: 10px;
-    border-radius: 5px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 20px;
-  }
-  a{
-    text-decoration: underline;
-    color: #ffffff;
-  }
-  
-  .icon {
-    margin-right: 10px;
-  }
-  
-  .external-link {
-    color: #666666;
-  }
-  
-  .contact-form {
-    width: 70%;
-    display: flex;
     flex-direction: column;
   }
-  .contact-form input{
-    max-width: 55%;
+
+  .social-links, .contact-form {
+    width: 100%;
   }
-  /* .contact-form #email{
-    max-width: 60%;
-  }
-  .contact-form #subject{
-    max-width: 60%;
-  } */
-  
-  input, textarea {
-    background-color: #2a2a2a;
-    border: none;
-    padding: 10px;
-    margin-bottom: 10px;
-    color: #ffffff;
-    border-radius: 5px;
-    font-size: 20px;
-  }
-  
-  textarea {
-    height: 150px;
-    resize: vertical;
-  }
-  
-  button {
-    background-color: #00ff00;
-    color: #000000;
-    border: none;
-    padding: 10px;
-    border-radius: 5px;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .send-icon {
-    margin-left: 10px;
-  }
-  
-  @media (max-width: 768px) {
-    .contact-content {
-      flex-direction: column;
-    }
-  
-    .social-links, .contact-form {
-      width: 100%;
-    }
-  }
+}
+
+/* New CSS for Copyright Section */
+.footer-copyright {
+  text-align: center;
+  background-color: #2a2a2a;
+  padding: 20px 0;
+  color: #ffffff;
+  font-size: 16px;
+  padding-bottom: 100px;
+}
+
+.footer-links {
+  margin-top: 10px;
+}
+
+.footer-links a {
+  margin: 0 10px;
+  color: #ffffff;
+  font-size: 24px;
+  text-decoration: none;
+}
+
+.footer-links a.linkedin:hover {
+  color: #0e76a8; /* LinkedIn Blue */
+}
+
+.footer-links a.github:hover {
+  color: #096424; /* GitHub Dark */
+}
+
+.footer-links a.email:hover {
+  color: #D44638; /* Gmail Red */
+}
