--- a/src/components/Exprience/index.css
+++ b/src/components/Exprience/index.css
@@ -1,5 +1,3 @@
-/******* exprience CSS ********/
-/*******************************/
 .exprience {
     display: flex;
     flex-direction: column;
@@ -7,14 +5,11 @@
     position: relative;
     z-index: 1;
     align-items: center;
-    padding: 0px 0px 60px 0px;
+    padding: 200px 0px 60px 0px;
     color:#FFFFFF;
-    padding-top: 150px;
 }
 #title {
     text-align: center;
-    /* color: #cccccc;
-    margin-bottom: 20px; */
     font-size: 42px;
     font-weight: 600;
     margin: 0;
@@ -23,16 +18,16 @@
 
 .exprience .timeline {
     position: relative;
-    width: 100%;
-    margin-top: 50px;
-
+    width: 1350px;
+    /* width: 100%; */
+    padding-top: 40px;
 }
 
 .exprience .timeline::after {
     content: '';
     position: absolute;
-    width: 2px;
-    background: #EF233C;
+    width: 3px;
+    background: #054916;
     top: 0;
     bottom: 0;
     left: 50%;
@@ -55,6 +50,7 @@
 .exprience .timeline .timeline-item.right {
     left: 50%;
     padding-left: 30px;
+    
 }
 
 .exprience .timeline .timeline-item::after {
@@ -95,10 +91,9 @@
     position: absolute;
     width: 100%;
     top: 44px;
-    font-size: 16px;
+    font-size: 18px;
     font-weight: 600;
-    color: #EF233C;
-    text-transform: uppercase;
+    color: #3e8339;
     letter-spacing: 1px;
     z-index: 1;
 }
@@ -119,7 +114,6 @@
     position: relative;
     border-right: 5px solid #dddddd;
     box-shadow: 0 0 60px rgba(0, 0, 0, .08);
-    height: 200px;
 }
 
 .exprience .timeline .timeline-item.right .timeline-text {
@@ -191,5 +185,3 @@
         border-left: 5px solid #dddddd;
     }
 }
-
-/*******************************/
