Update in Components: Project,Certificates, Education

--- a/src/components/Education/index.css
+++ b/src/components/Education/index.css
@@ -139,6 +139,10 @@
     margin: 0;
     font-size: 16px;
 }
+hr{
+    width: 1400px;
+}
+
 
 @media (max-width: 767.98px) {
     .education .timeline::after {
